[gd_scene load_steps=5 format=3 uid="uid://dgu6g10cgu5fo"]

[ext_resource type="Theme" uid="uid://dkfgeooa7bp5d" path="res://Theme.tres" id="1_51h1i"]
[ext_resource type="Script" path="res://Map editor/maplist.gd" id="1_ldx85"]
[ext_resource type="Script" path="res://Map editor/level_editor_menu.gd" id="1_x83qq"]
[ext_resource type="Script" path="res://Map editor/name_popup.gd" id="3_l1ivd"]

[node name="map_editor_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_51h1i")
script = ExtResource("1_x83qq")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -240.5
offset_right = 460.0
offset_bottom = 240.5
grow_horizontal = 2
grow_vertical = 2
max_columns = 10
fixed_column_width = 200
script = ExtResource("1_ldx85")

[node name="no_saved_maps" type="Label" parent="ItemList"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "You have no saved maps."
horizontal_alignment = 1

[node name="create_new" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -45.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Create new"

[node name="delete" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -45.0
offset_right = 124.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
disabled = true
text = "Delete map"

[node name="name_popup" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(300, 75)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -37.5
offset_right = 150.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_l1ivd")

[node name="LineEdit" type="LineEdit" parent="name_popup"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.0
offset_right = 130.0
offset_bottom = 31.0
grow_horizontal = 2
placeholder_text = "Name of map"
alignment = 1
max_length = 22
clear_button_enabled = true

[node name="cancel" type="Button" parent="name_popup"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 60.0
grow_vertical = 0
text = "Cancel"

[node name="create" type="Button" parent="name_popup"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Create"

[connection signal="item_activated" from="ItemList" to="ItemList" method="_on_item_activated"]
[connection signal="item_selected" from="ItemList" to="ItemList" method="_on_item_selected"]
[connection signal="pressed" from="create_new" to="name_popup" method="_on_create_new_pressed"]
[connection signal="pressed" from="delete" to="ItemList" method="_on_delete_pressed"]
[connection signal="pressed" from="name_popup/cancel" to="name_popup" method="_on_cancel_pressed"]
[connection signal="pressed" from="name_popup/create" to="name_popup" method="_on_create_pressed"]
